[project]
authors = [
   { name = "Adrien Plaçais", email = "placais@lpsc.in2p3.fr" },
   { name = "Bruce Yee-Rendon", email = "byee@post.j-parc.jp" },
   { name = "Didier Uriot", email = "didier.uriot@cea.fr" },
   { name = "Frédéric Bouly", email = "bouly@lpsc.in2p3.fr" },
   { name = "Jean-Michel Lagniel", email = "jean-michel.lagniel@ganil.fr" },
]
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Science/Research",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.12",
   "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
   "cloudpickle>=3.0.0, <4.0.0",
   "Cython>=3.0.10, <4.0.0",
   "matplotlib>=3.9.1, <4.0.0",
   "myst-parser>=3.0.1, <4.0.0",
   "nbsphinx>=0.9.4, <1.0.0",
   "numpy>=2.0.1, <3.0.0",
   "pandas>=2.2.2, <3.0.0",
   "palettable>=3.3.3, <4.0.0",
   "pymoo>=0.6.1.3, <1.0.0.0",
   "pytest>=8.3.2, <9.0.0",
   "scipy>=1.14.0, <2.0.0",
   "setuptools>=72.0.0, <73.0.0",
   "sphinx-rtd-theme>=2.0.0, <3.0.0",
   "sphinx-multiversion>=0.2.4, <1.0.0",
   "sphinxcontrib-bibtex>=2.6.0,<3.0.0",
]
description = "Automatically compensate cavity failures in linacs"
keywords = ["failure compensation", "linac", "linear accelerator", "reliability"]
name = "LightWin"
readme = "README.md"
requires-python = ">=3.12"
version = "0.8.0b2"

[project.scripts]
lw-combine-solutions = "lightwin.scripts.combine_solutions:main"
lw-compute-lost-power-per-meter = "lightwin.scripts.compute_lost_power_per_meter:main"
lw-reorder-output-figures = "lightwin.scripts.reorder_output_figures:main"

[project.urls]
Documentation = "https://adrienplacais.github.io/LightWin/html"
Homepage = "https://github.com/AdrienPlacais/LightWin"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
src_paths = ["./src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
filterwarnings = ["ignore:.*cKDTree.*:DeprecationWarning"]
markers = [
   "cython: mark tests that require a Cython compilation (deselect with '-m \"not cython\"')",
   "envelope1d: mark tests using the Envelope1D solver",
   "envelope3d: mark tests using the Envelope3D solver",
   "implementation: mark tests currently under implementation",
   "slow: mark a test as slow (deselect with '-m \"not slow\"')",
   "smoke: mark quick and critical tests (select with '-m smoke')",
   "tmp: mark to select specific tests for debug",
   "tracewin: mark tests requiring a working installation of TraceWin (deselect with '-m \"not tracewin\"')",
]
minversion = "6.0"
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel", "Cython==3.0.10", "numpy==2.0.1"]
